--- a/manifest.json
+++ b/manifest.json
@@ -10,13 +10,13 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/Nova-AI-Planer/nova-192.png",
+      "src": "nova-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "/Nova-AI-Planer/nova-512.png",
+      "src": "nova-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable any"
