--- a/manifest.json
+++ b/manifest.json
@@ -10,16 +10,16 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "nova-192.svg",
+      "src": "/Nova-AI-Planer/nova-192.png",
       "sizes": "192x192",
-      "type": "image/svg+xml",
-      "purpose": "any"
+      "type": "image/png",
+      "purpose": "maskable any"
     },
     {
-      "src": "nova-512.svg",
+      "src": "/Nova-AI-Planer/nova-512.png",
       "sizes": "512x512",
-      "type": "image/svg+xml",
-      "purpose": "any"
+      "type": "image/png",
+      "purpose": "maskable any"
     }
   ],
   "categories": ["productivity", "utilities"],
